--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ inbounds:
   protocol: trojan
   settings:
     clients:
-    - password: "123"
+    - password: "0c45d91e3f66"
   streamSettings:
     network: ws
     wsSettings:
